addons/tracing/jaeger/jaeger-deployment.yaml
# content of jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      automountServiceAccountToken: false
      containers:
        - name: jaeger-all-in-one
          image: jaegertracing/all-in-one
          imagePullPolicy: IfNotPresent
          ports:
            - protocol: TCP
              containerPort: 5778
            - protocol: TCP
              containerPort: 16686
            - protocol: TCP
              containerPort: 14268
            - protocol: TCP
              containerPort: 14250
            - protocol: TCP
              containerPort: 9411
            - protocol: UDP
              containerPort: 5775
            - protocol: UDP
              containerPort: 6831
            - protocol: UDP
              containerPort: 6832
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '1024Mi'
              cpu: '1000m'
