addons/tracing/jaeger/jaeger-ingress.yaml
# content of jaeger-ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http
    # kubernetes.io/ingress.class: ambassador
spec:
  rules:
    - host: jaeger.dev.lan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: jaeger
                port: 
                  number: 16686
